# realmspace

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md  duplicates.txt  full-tree.txt  tailwind.config.js
.run/: tauri.run.xml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: bubble.rs  mod.rs
app/src/components/base/: bubble.rs  mod.rs  pixelbubble.rs  pixelbutton.rs  pixelcard.rs  pixeltextarea.rs
app/src/components/base/styles/: bubble.module.css  button.module.css
app/src/components/islands/: inputchecker.rs  mod.rs  signalchecker.rs
app/src/routes/: home.rs  mod.rs  sanitycheck.rs
app/src/styles/: bubble.module.css  main.css
app/src/styles/base/: bubble.module.css  button.module.css
backend/: Cargo.toml
backend/src/: fallback.rs  lib.rs  main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
zoku/: Cargo.toml
zoku/src/: main.rs
