[workspace]
resolver = "2"
members = ["src-tauri", "frontend", "backend", "app", "server"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "realmspace"
bin-package = "server"
lib-package = "frontend"
output-name = "realmspace"
assets-dir = "public"
tailwind-input-file = "input.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[workspace.dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
leptos = "0.7"
leptos_axum = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
leptos_server = "0.7"
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", default-features = false }
serde_json = "*"
tauri = "2.1.1"
tauri-build = "2.0.3"
tokio = "1.42.0"
tower = "0.5"
tower-http = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = "0.3"
