[workspace]
resolver = "2"
members = ["app", "backend", "frontend"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
lto = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[workspace.metadata.leptos]]
# project name
name = "realmspace"
assets-dir = "public"
bin-package = "backend"
lib-package = "frontend"
tailwind-input-file = "app/src/styles/main.css"
site-pkg-dir = "pkg"
site-root = "target/site"
site-addr = "0.0.0.0:8000"
reload-port = 8001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr", "tracing"]
bin-default-features = false
lib-features = ["hydrate", "tracing"]
lib-default-features = false

[workspace.dependencies]
axum = "0.7.9"
leptos = "0.7.3"
leptos_axum = "0.7.3"
leptos_meta = "0.7.3"
leptos_router = "0.7.3"
tracing = "0.1.41"
#tower = "0.4.13"
#tower-http = "0.5.2"
#serde_json = "*"
#tauri = "2.1.1"
#tauri-build = "2.0.3"
tokio = "1.43.0"
urlencoding = "2.1"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
wasm-bindgen = "0.2.99"
