[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]

backend = { path = "../backend" }
leptos = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "backend/hydrate"]
ssr = ["leptos/ssr", "backend/ssr", "leptos_router/ssr"]
