[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]

backend = { path = "../backend" }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "backend/hydrate"]
ssr = ["leptos/ssr", "backend/ssr", "leptos_router/ssr"]
