[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = {workspace = true }
urlencoding = { workspace = true }
tracing = {workspace = true}

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
islands = ["leptos/islands"]
tracing = ["leptos/tracing", "leptos_router/tracing", "leptos_meta/tracing"]
