[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
] # Allows multiple output formats for flexibility

[dependencies]
# Core dependencies
leptos = { workspace = true } # Main Leptos framework

# Optional dependencies for SSR and Axum-based server
tower-http = { workspace = true, optional = true }
leptos_server = { workspace = true }
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
[features]
# Hydration for client-side rendering
hydrate = ["leptos/hydrate"]

# Server-Side Rendering (SSR) setup
ssr = [
    "leptos/ssr",      # Enable SSR in Leptos
    "dep:leptos_axum", # Leptos integration with Axum
    "dep:axum",        # Axum web framework
    "dep:tower",       # Core Tower utilities
    "dep:tower-http",  # Tower HTTP utilities
]
