[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
axum = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
ssr = ["leptos/ssr"]
islands = ["leptos/islands"]
tracing = ["leptos/tracing", 'leptos_axum/tracing', 'axum/tracing']