[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "frontend_bin"
path = "./src/main.rs"

[dependencies]
leptos = { workspace = true }
app = { path = "../app" }


[features]
csr = ["leptos/csr", "app/csr"]
hydrate = ["leptos/hydrate", "app/hydrate"]
