[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "frontend_bin"
path = "./src/main.rs"

[dependencies]
leptos = { workspace = true }
app = { path = "../app" }
cfg-if = { workspace = true }
wasm-bindgen = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }


[features]
csr = ["leptos/csr", "app/csr"]
hydrate = ["leptos/hydrate", "app/hydrate"]
