[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
app = { path = "../app" }
backend = { path = "../backend", features = ["ssr"] }
axum = { workspace = true }
leptos = { workspace = true, features = ["ssr"]}
leptos_axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "cors", "trace"] }

